@@ -35,6 +35,7 @@ Cacti CHANGELOG
 -bug: when adding a tree node via the api numeric and natural were reversed
 -bug: Some snmp agents don't getnext on '.1' and need another oid '.1.3'
 -bug: Remove call pass by reference from function declarations
+-bug: When creating new graphs without a data source, print error to user instead of throwing php error
 -documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
 -documentation: Documentation of specific rrdtool feature
 -documentation: Use of SNMP exec option up to net-snmp 5.3
